# Nova-Long-Horizon-Agentic-Ai

./: .gitignore  README.md  config.py  exceptions.py  llm_client.py  logging_config.py  main.py  mem_0.py  pyproject.toml  pytest.ini  reasoning_logger.py  requirements.txt  tasks.md  tools.py  tui.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_logging_config.py  test_reasoning_logger.py  test_retry.py
utils/: __init__.py  retry.py
