[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klix-code"
version = "0.1.0"
description = "Klix code - AI-powered coding assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.0.0",
    "ollama>=0.3.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "typer>=0.12.0",
    "aiofiles>=24.0.0",
    "requests>=2.31.0",
    "dnspython>=2.6.0",
    "python-whois>=0.9.0",
]

[project.scripts]
Klix = "main:run_cli"

[tool.setuptools]
packages = ["utils"]
py-modules = ["main", "config", "exceptions", "llm_client", "logging_config", "tools", "tui", "mem_0", "reasoning_logger"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.md", ".env.example"]
